# data-centre-modelling

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/: profile_39_offshorewind-2023.nc  profile_39_offwindshorewind-dc.nc  profile_39_solar-2019.nc  renewable_power_plants_UK.csv
notebooks/: Ryan'sDCmodel.ipynb  Ryan'sDCmodel2.ipynb  model.ipynb  profiles.ipynb
notebooks/2023 profile resources/: busmap_base_s.csv  electricity_demand.csv  profile_39_solar.nc
tests/: test_example.py
